use no-gutter to prevent cut off text

--- a/apps/core/static/scss/_blocks.scss
+++ b/apps/core/static/scss/_blocks.scss
@@ -66,7 +66,6 @@
 }
 
 .block--all_persons_list__item {
-    padding: 0;
     position: relative;
 
     a {
